# Hack-n-TAP

./: .env  .gitignore  CHECKLIST.md  Dockerfile  Makefile  README.md  TODO.md  env.example  manage.py  pyproject.toml  requirements.txt  rfid_system.db  run_migrations.py  test_api.py  test_api.sh  test_db_connection.py
.github/workflows/: docker-image.yml  test.yml
DOCS/: README.md  apis-rest.md  configuracao.md  deploy.md  interface-web.md  modelos-dados.md  seguranca.md
delivery/: deploy-dev.yml
iot/: bottom_box.py  coletor.py  controler_jogo_ww2.py  scroll_log.txt  test_pedro.py  test_pedro_requests.py
lhctap/: asgi.py  urls.py  wsgi.py
lhctap/apps/accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
lhctap/apps/analytics/: services.py  urls.py  views.py
lhctap/apps/core/: exceptions.py  middleware.py  services.py  (+2 more)
lhctap/fixtures/: initial_data.json
lhctap/settings/: __init__.py  base.py  development.py  production.py  testing.py
lhctap/templates/: base.html
scripts/: setup.sh
tap/: README.md  README_TERMINAL.md  __init__.py  cli.py  main.py  requirements.txt  rfid_app_old.py  rfid_system.db
tap/cli/: __init__.py  textual_controller.py  textual_screens.py
tap/control/: controller.py
tap/model/: __init__.py  database.py
tap/static/: template.kv
tap/view/: screens.py
templates/: base.html
templates/accounts/: profile.html
templates/dashboard/: member.html
templates/registration/: login.html
templates/taps/: dashboard.html
templates/wallet/: add_credits.html  statement.html
tests/: test_functional.py
(+45 files in other folders)
