[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hack-n-tap"
version = "0.1.0"
description = "CLI para comunicação serial com Arduino"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyserial",
]

[project.scripts]
tap = "tap.main:main"

[tool.hatch.build.targets.wheel]
packages = ["tap"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tap/consumo.txt",
    "tap/grafico.png",
    "tap/__pycache__",
    "tap/model/__pycache__",
    "env/",
]

